crates/gossamer-diagnostics/tests/snapshots/GT0103.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0103]: An `std::ffi` operation that touches or forges native memory - - here
--- framed ---
error[GT0103]: An `std::ffi` operation that touches or forges native memory -
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
