crates/gossamer-diagnostics/tests/snapshots/GT0105.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0105]: `ffi::Ptr<T>`, or an `ffi` memory operation over `T`, names a type - here
--- framed ---
error[GT0105]: `ffi::Ptr<T>`, or an `ffi` memory operation over `T`, names a type
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
