crates/gossamer-diagnostics/tests/snapshots/GT0106.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0106]: A value holding an `ffi::Ptr` or `ffi::Handle` is the answer of a - here
--- framed ---
error[GT0106]: A value holding an `ffi::Ptr` or `ffi::Handle` is the answer of a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
