crates/gossamer-diagnostics/tests/snapshots/GT0111.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0111]: A C global declared `static NAME: T` in an `unsafe extern` block is - here
--- framed ---
error[GT0111]: A C global declared `static NAME: T` in an `unsafe extern` block is
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
