crates/gossamer-diagnostics/tests/snapshots/GT0114.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0114]: A spawned closure writes a binding it captured. A spawned closure - here
--- framed ---
error[GT0114]: A spawned closure writes a binding it captured. A spawned closure
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
